# bidfax

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: Dockerfile  celery_app.py  docker-compose.yml  manage.py
src/bidfax/: asgi.py  settings.py  urls.py  wsgi.py
src/bidfax/auction/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
src/bidfax/auction/api/: serializers.py  views.py
src/bidfax/auction/migrations/: 0001_initial.py  0002_alter_auction_auction_name_alter_auction_documents_and_more.py
src/bidfax/auction/services/: connection.py  db.py  scraper.py
src/bidfax/authentication/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  urls.py
src/bidfax/authentication/api/: permissions.py  serializers.py  views.py  viewsets.py
src/bidfax/authentication/migrations/: 0001_initial.py
src/config/: celery.py  urls.py  yasg.py
src/config/settings/: base.py
src/requirements/: base.txt
