[tool.poetry]
name = "bidfax"
version = "0.1.0"
description = ""
authors = ["ilyaverb <verbiloilyaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2"
django-environ = "^0.10.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
